add new topic_id filter parameter to speeches endpoint
